# dataset

./: README.md  add_documents.py  pyproject.toml  remove_duplicates.py  translate_new.py  usage_guide.md
data/processed/: corpus.json  corpus_raw.json  queries.json  queries_raw.json
data/raw/: drcd.json
docs/: Spec.md
src/: data_download.py  fix_questions.py  process_data.py  replace_question.py  translate_data.py  verify_data.py
